Setup of mock server and added index.html and client packages like bootstrap, angular, jquery (with bower)
